// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactFuri /> custom render prop 1`] = `
<div>
  <span
    class="sc-bdVaJa hSpgnF"
    lang="ja"
  >
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      >
        かん
      </span>
      <span
        class="sc-bxivhb imCjfa"
      >
        漢
      </span>
    </span>
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      >
        じ
      </span>
      <span
        class="sc-bxivhb imCjfa"
      >
        字
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> furi provided: render furigana over related kanji blocks 1`] = `
<div>
  <span
    class="sc-bdVaJa hSpgnF"
    lang="ja"
  >
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      >
        かん
      </span>
      <span
        class="sc-bxivhb imCjfa"
      >
        漢
      </span>
    </span>
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      >
        じ
      </span>
      <span
        class="sc-bxivhb imCjfa"
      >
        字
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> no furi provided: render relevant readings over kanji blocks 1`] = `
<div>
  <span
    class="sc-bdVaJa hSpgnF"
    lang="ja"
  >
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      />
      <span
        class="sc-bxivhb imCjfa"
      >
        お
      </span>
    </span>
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      >
        みま
      </span>
      <span
        class="sc-bxivhb imCjfa"
      >
        見舞
      </span>
    </span>
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      />
      <span
        class="sc-bxivhb imCjfa"
      >
        い
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> no reading or furi provided: just render word 1`] = `
<div>
  <span
    class="sc-bdVaJa hSpgnF"
    lang="ja"
  >
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-htpNat cKlPSt"
      />
      <span
        class="sc-bxivhb imCjfa"
      >
        漢字
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> showFuri false: no furigana rendered 1`] = `
<div>
  <span
    class="sc-bdVaJa hSpgnF"
    lang="ja"
  >
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-bxivhb imCjfa"
      >
        漢
      </span>
    </span>
    <span
      class="sc-bwzfXH faybqm"
    >
      <span
        class="sc-bxivhb imCjfa"
      >
        字
      </span>
    </span>
  </span>
</div>
`;
